--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,24 @@
 body {
   font-family: sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 1rem;
+}
+
+*:focus {
+  box-shadow: 0 2px 0 cornflowerblue;
+  outline: none;
+}
+
+a {
+  color: cornflowerblue;
+  text-decoration: none;
+}
+
+a:hover {
+  box-shadow: 0 2px 0 cornflowerblue;
+}
+
+img {
+  max-width: 100%;
 }
